--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
             padding: 0;
         }
         body{
+            height: 100vh;
+            width: 100%;
             color:firebrick;
-            background-color: burlywood;
+            /*background-color: burlywood;*/
+            background: radial-gradient(circle, white 20%,burlywood 80%);
         }
         body>p{
             position: fixed;
